update documentation and the example notebooks

--- a/examples/annotation/omero-annotate-ai-annotation-widget.ipynb
+++ b/examples/annotation/omero-annotate-ai-annotation-widget.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OMERO CellPose Workflow\n",
-    "\n",
-    "\n"
+    "# OMERO image annotation Workflow with micro-sam annotation plugin\n"
    ]
   },
   {
@@ -82,14 +80,15 @@
       "  • Choose password storage duration if desired\n",
       "  • Click 'Save & Connect' to establish connection\n",
       "\n",
-      "📄 Loaded configuration from connection history: root@localhost (system)\n",
+      "📄 Loaded configuration from connection history: root@localhost\n",
+      "🔐 Password loaded from keychain (no expiration)\n",
       "🔐 Password loaded from keychain (no expiration)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87d42adef7c44a4c8922c98ad094ac89",
+       "model_id": "05cc279c84554d539975112736cd6447",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,6 +156,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'container_type': 'project',\n",
+       " 'container_id': 101,\n",
+       " 'container_name': 'Senescence',\n",
+       " 'total_images': 6,\n",
+       " 'sample_image_id': 256,\n",
+       " 'sample_image_name': 'r01c01.tif',\n",
+       " 'dimensions': {'T': 14, 'C': 5, 'Z': 1, 'Y': 2016, 'X': 2016},\n",
+       " 'pixel_sizes': {}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from omero_annotate_ai.omero.omero_utils import get_container_info\n",
+    "\n",
+    "get_container_info(conn,\"project\",101)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,7 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Auto-reload package edits in this notebook\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ff6e9480d64950aa7b2875c32c2340",
+       "model_id": "1225f644faad4e718a64eb3d4faeb95a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,6 +262,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f40fed0bb5a45dfa08d2d82b807115f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<h3>🔬 OMERO Annotation Workflow</h3>', layout=Layout(margin='0 0 20px 0')), IntProg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Helper to reload package and rebuild the widget without resetting the notebook\n",
+    "import importlib, sys\n",
+    "import omero_annotate_ai as _oaa\n",
+    "from omero_annotate_ai import create_workflow_widget as _mk_widget\n",
+    "from omero_annotate_ai.omero.omero_utils import get_container_info as _probe  # sanity import\n",
+    "def reload_widget(existing_conn=None):\n",
+    "    # Reload top-level package and commonly edited submodules\n",
+    "    importlib.reload(_oaa)\n",
+    "    # Optionally reload specific modules if needed (safe if they exist)\n",
+    "    for modname in list(sys.modules):\n",
+    "        if modname.startswith('omero_annotate_ai.'):\n",
+    "            try:\n",
+    "                importlib.reload(sys.modules[modname])\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "    # Re-import factory to ensure we have the latest symbol\n",
+    "    from omero_annotate_ai import create_workflow_widget as _mk_widget2\n",
+    "    w = _mk_widget2(connection=existing_conn)\n",
+    "    display(w.main_widget)\n",
+    "    return w\n",
+    "\n",
+    "# Usage:\n",
+    "workflow_widget = reload_widget(existing_conn=conn)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -230,29 +315,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "📋 Configuration Summary:\n",
-      "   📦 Container: plate (ID: 2)\n",
-      "   🎯 Training Set: micro_sam_incucyte_20250909_212809\n",
-      "   🔬 Model: vit_b_lm\n",
-      "   📺 Channel: [0]\n",
-      "   📁 Output: D:\\Maarten\\Data\\cellpose_tmp\n",
-      "   🔄 Resume from Table: False\n",
-      "   📖 Read-only Mode: False\n",
-      "   🧩 Patches: 1 per image (512×512)\n",
-      "\n",
-      "📊 Processing: 3 training + 3 validation\n"
-     ]
-    }
-   ],
+   "source": [
+    "#### 4.1. Configuration summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get configuration from workflow widget\n",
     "config = workflow_widget.get_config()\n",
@@ -279,19 +352,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Validating plate with ID 2...\n",
-      "✅ Found plate: incucyte\n"
-     ]
-    }
-   ],
+   "source": [
+    "#### 4.2. Convert configuration to an annotation pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create pipeline and preview what will be processed\n",
     "pipeline = create_pipeline(config, conn)\n",
@@ -313,72 +384,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Starting annotation pipeline...\n",
-      "Loading images from plate 2\n",
-      "Found 88 images\n",
-      "Processing 88 images for Cellpose training\n",
-      "Preparing processing units...\n",
-      "Creating initial OMERO table...\n",
-      "📋 Created/replaced tracking table 'micro_sam_training_micro_sam_incucyte_20250909_212809' with 6 units\n",
-      "   Container: plate 2\n",
-      "   Table ID: 42\n",
-      "Created OMERO table with ID: 42\n",
-      "Found 6 unprocessed annotations\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "\n",
-      " Images successfully loaded!\n"
-     ]
-    }
-   ],
    "source": [
-    "# Run the pipeline for CellPose\n",
+    "#### 4.3. Run the annotation pipeline on the files\n",
+    "After loading of the files the napari will open for you to annotate the images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the complete annotation pipeline\n",
     "print(\"🚀 Starting annotation pipeline...\")\n",
-    "try:\n",
-    "    table_id, processed_images = pipeline.run_cp_workflow()\n",
+    "print(f\"   🔬 Using micro-SAM model: {config.ai_model.model_type}\")\n",
     "\n",
-    "    print(f\"\\n Images successfully loaded!\")        \n",
+    "if config.processing.batch_size == 0:\n",
+    "    print(f\"   ⚡ Processing: All images in one batch\")\n",
+    "else:\n",
+    "    print(f\"   📦 Processing: Batches of {config.processing.batch_size} images\")\n",
+    "\n",
+    "print(f\"   🎨 Napari will open for interactive annotation\")\n",
+    "print(f\"   📝 Close napari windows when annotation is complete\")\n",
+    "\n",
+    "try:\n",
+    "    table_id, processed_images = pipeline.run_full_workflow()\n",
+    "    \n",
+    "    print(f\"\\n🎉 Annotation pipeline completed successfully!\")\n",
+    "    print(f\"📋 Tracking table ID: {table_id}\")\n",
+    "    \n",
+    "    if config.workflow.read_only_mode:\n",
+    "        print(f\"💾 Annotations saved locally to: {config.output.output_directory}\")\n",
+    "    else:\n",
+    "        print(f\"☁️ Annotations uploaded to OMERO\")\n",
+    "        \n",
     "except Exception as e:\n",
     "    print(f\"Error during annotation pipeline: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()\n",
     "    raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the configuration file to the local folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export configuration for future use\n",
+    "config_filename = f\"annotation_config_{config.name}.yaml\"\n",
+    "config_path = Path(config.output.output_directory) / config_filename\n",
+    "\n",
+    "try:\n",
+    "    config.save_yaml(config_path)\n",
+    "    print(f\"💾 Configuration saved to: {config_path}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ Could not save to output folder, saving to current directory\")\n",
+    "    config.save_yaml(config_filename)\n",
+    "    print(f\"💾 Configuration saved to: {config_filename}\")\n",
+    "\n",
+    "print(f\"\\n📋 Configuration Summary:\")\n",
+    "print(f\"   Name: {config.name}\")\n",
+    "print(f\"   Description: {config.description}\")\n",
+    "print(f\"   Output Directory: {config.output.output_directory}\")\n",
+    "print(f\"   Model Type: {config.ai_model.model_type}\")\n",
+    "\n",
+    "print(f\"\\n🔄 To reuse this configuration:\")\n",
+    "print(f\"```python\")\n",
+    "print(f\"from omero_annotate_ai import load_config\")\n",
+    "print(f\"config = load_config('{config_filename}')\")\n",
+    "print(f\"```\")"
    ]
   },
   {
@@ -415,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "micro-sam",
    "language": "python",
    "name": "python3"
   },
@@ -429,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
