--- a/examples/other/cleanup_annotation.ipynb
+++ b/examples/other/cleanup_annotation.ipynb
@@ -195,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "micro-sam",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
