Add VSCode settings for pytest and update Jupyter notebook execution counts
- Introduced a new settings.json file for configuring pytest in VSCode.
- Updated execution counts in the Jupyter notebook for better tracking.
- Enhanced error handling in the integration tests for OMERO connection.

--- a/notebooks/annotation/omero-annotate-ai-cellpose.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-cellpose.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,18 +79,31 @@
       "  • Test connection before proceeding\n",
       "  • Choose password storage duration if desired\n",
       "  • Click 'Save & Connect' to establish connection\n",
-      "\n"
+      "\n",
+      "Loaded configuration from connection history: root@localhost\n",
+      "Password loaded from keychain (no expiration)\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'create_omero_connection_widget' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  • Click \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSave & Connect\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m to establish connection\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m---> 10\u001b[0m conn_widget \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_omero_connection_widget\u001b[49m()\n\u001b[0;32m     11\u001b[0m conn_widget\u001b[38;5;241m.\u001b[39mdisplay()\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m📝 Next Step: Run the cell below after connecting to OMERO\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'create_omero_connection_widget' is not defined"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4740389adea486698fbbc649a0eeaed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<h3>🔌 OMERO Server Connection</h3>', layout=Layout(margin='0 0 20px 0')), HTML(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📝 Next Step: Run the cell below after connecting to OMERO\n"
      ]
     }
    ],
@@ -447,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "micro-sam",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
