Refactor OMERO Annotation Notebook
- Removed keyring support check from the initialization section.
- Updated connection group from 'system' to 'users'.
- Changed model IDs for workflow and connection widgets.
- Adjusted execution counts for code cells to maintain sequence.
- Cleaned up output messages for clarity.
- Removed unused code related to widget reloading.
- Added configuration summary output for better user feedback.
- Fixed error handling in the annotation pipeline execution.
- Updated Python version in notebook metadata.

--- a/notebooks/annotation/omero-annotate-ai-annotation_dev.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-annotation_dev.ipynb
@@ -24,7 +24,8 @@
      "output_type": "stream",
      "text": [
       "📦 omero-annotate-ai version: 0.1.0\n",
-      "🔗 OMERO functionality: ✅ Available\n"
+      "🔗 OMERO functionality: ✅ Available\n",
+      "🔑 Keyring support: ✅ Available\n"
      ]
     }
    ],
@@ -81,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c33942b2a62146fca3dd59776cb974ae",
+       "model_id": "e4eeefcce1f74b5aa083b93ebd5c202c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4be5bd706eb54bada65a25e89d4dc346",
+       "model_id": "97ab011ddc664ff787ad9f7cbc97270b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,6 +238,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09fb79fb911049b087ec9097b522df8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<h3>🔬 OMERO Annotation Workflow</h3>', layout=Layout(margin='0 0 20px 0')), IntProg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Helper to reload package and rebuild the widget without resetting the notebook\n",
+    "import importlib, sys\n",
+    "import omero_annotate_ai as _oaa\n",
+    "from omero_annotate_ai import create_workflow_widget as _mk_widget\n",
+    "from omero_annotate_ai.omero.omero_utils import get_container_info as _probe  # sanity import\n",
+    "def reload_widget(existing_conn=None):\n",
+    "    # Reload top-level package and commonly edited submodules\n",
+    "    importlib.reload(_oaa)\n",
+    "    # Optionally reload specific modules if needed (safe if they exist)\n",
+    "    for modname in list(sys.modules):\n",
+    "        if modname.startswith('omero_annotate_ai.'):\n",
+    "            try:\n",
+    "                importlib.reload(sys.modules[modname])\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "    # Re-import factory to ensure we have the latest symbol\n",
+    "    from omero_annotate_ai import create_workflow_widget as _mk_widget2\n",
+    "    w = _mk_widget2(connection=existing_conn)\n",
+    "    display(w.main_widget)\n",
+    "    return w\n",
+    "\n",
+    "# Usage:\n",
+    "workflow_widget = reload_widget(existing_conn=conn)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +308,13 @@
      "text": [
       "\n",
       "📋 Configuration Summary:\n",
-      "   📦 Container: dataset (ID: 1505)\n",
-      "   🎯 Training Set: 241023spinningdisc_20250925_163348\n",
+      "   📦 Container: dataset (ID: 0)\n",
+      "   🎯 Training Set: default_annotation_workflow\n",
       "   🔬 Model: vit_b_lm\n",
       "   📺 Channel: [0]\n",
-      "   📁 Output: C:\\Users\\mwpaul\\omero_annotate_ai\\omero_annotations3\n",
+      "   📁 Output: annotations\n",
       "   🔄 Resume from Table: False\n",
-      "   📖 Read-only Mode: True\n",
-      "   🧩 Patches: 1 per image (300×300)\n",
+      "   📖 Read-only Mode: False\n",
       "\n",
       "📊 Processing: 3 training + 3 validation\n"
      ]
@@ -300,50 +346,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'annotation_type': 'segmentation_mask',\n",
-       " 'annotation_method': 'automatic',\n",
-       " 'annotation_criteria': '',\n",
-       " 'spatial_coverage': {'channels': [0],\n",
-       "  'timepoints': [0],\n",
-       "  'timepoint_mode': 'specific',\n",
-       "  'z_slices': [0],\n",
-       "  'z_slice_mode': 'specific',\n",
-       "  'spatial_units': 'pixels',\n",
-       "  'three_d': False,\n",
-       "  'z_range_start': 0,\n",
-       "  'z_range_end': 0},\n",
-       " 'study_context': {'title': '',\n",
-       "  'description': '',\n",
-       "  'keywords': [],\n",
-       "  'organism': None,\n",
-       "  'imaging_method': None},\n",
-       " 'quality_metrics': {'validation_strategy': 'random_split',\n",
-       "  'train_fraction': 0.7,\n",
-       "  'train_n': 3,\n",
-       "  'validation_fraction': 0.3,\n",
-       "  'validate_n': 3,\n",
-       "  'segment_all': False,\n",
-       "  'quality_threshold': None}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.omero\n",
-    "config.to_mifa_metadata()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,18 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Validating dataset with ID 1505...\n",
-      "✅ Found dataset: 241023 spinning disc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create pipeline and preview what will be processed\n",
     "pipeline = create_pipeline(config, conn)\n",
@@ -394,43 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Starting annotation pipeline...\n",
-      "   🔬 Using micro-SAM model: vit_b_lm\n",
-      "   ⚡ Processing: All images in one batch\n",
-      "   🎨 Napari will open for interactive annotation\n",
-      "Error during annotation pipeline: 'AnnotationPipeline' object has no attribute 'prepare_annotations'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\mwpaul\\AppData\\Local\\Temp\\ipykernel_1680\\1276168056.py\", line 13, in <module>\n",
-      "    pipeline.prepare_annotations()\n",
-      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: 'AnnotationPipeline' object has no attribute 'prepare_annotations'\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'AnnotationPipeline' object has no attribute 'prepare_annotations'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   🎨 Napari will open for interactive annotation\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     \u001b[43mpipeline\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprepare_annotations\u001b[49m()\n\u001b[32m     14\u001b[39m     table_id, processed_images = pipeline.run_microsam_annotation()\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m🎉 Annotation pipeline completed successfully!\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'AnnotationPipeline' object has no attribute 'prepare_annotations'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the complete annotation pipeline\n",
     "print(\"🚀 Starting annotation pipeline...\")\n",
@@ -442,11 +401,11 @@
     "    print(f\"   📦 Processing: Batches of {config.processing.batch_size} images\")\n",
     "\n",
     "print(f\"   🎨 Napari will open for interactive annotation\")\n",
+    "print(f\"   📝 Close napari windows when annotation is complete\")\n",
     "\n",
     "try:\n",
-    "    pipeline.prepare_annotations()\n",
-    "    table_id, processed_images = pipeline.run_microsam_annotation()\n",
-    "\n",
+    "    table_id, processed_images = pipeline.run_full_workflow()\n",
+    "    \n",
     "    print(f\"\\n🎉 Annotation pipeline completed successfully!\")\n",
     "    print(f\"📋 Tracking table ID: {table_id}\")\n",
     "    \n",
