Update output directory path for micro-SAM models in training notebook

--- a/notebooks/training/omero-training-microsam.ipynb
+++ b/notebooks/training/omero-training-microsam.ipynb
@@ -125,7 +125,7 @@
     "# Create output directory for training\n",
     "timestamp = datetime.datetime.now().strftime('%Y%m%d_%H%M%S')\n",
     "home_dir = Path.home()\n",
-    "models_dir = home_dir / \"micro-sam_models\"\n",
+    "models_dir = home_dir / \"omero-annotate-ai/micro-sam_models\"\n",
     "models_dir.mkdir(exist_ok=True)\n",
     "\n",
     "folder_name = f\"micro-sam-{timestamp}\"\n",
