Refactor OMERO annotation notebooks for clarity and conciseness
- Removed keyring support output from the AI annotation notebook.
- Enhanced markdown descriptions for better guidance in the CellPose notebook.
- Updated print statements to provide clearer feedback during setup and execution.
- Simplified connection and workflow setup instructions.
- Improved output formatting and reduced verbosity in pipeline execution feedback.
- Added cleanup recommendations for closing OMERO connections.

--- a/notebooks/annotation/omero-annotate-ai-annotation_dev.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-annotation_dev.ipynb
@@ -24,8 +24,7 @@
      "output_type": "stream",
      "text": [
       "📦 omero-annotate-ai version: 0.1.0\n",
-      "🔗 OMERO functionality: ✅ Available\n",
-      "🔑 Keyring support: ✅ Available\n"
+      "🔗 OMERO functionality: ✅ Available\n"
      ]
     }
    ],
