--- a/notebooks/annotation/omero-annotate-ai-cellpose.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-cellpose.ipynb
@@ -4,226 +4,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OMERO image annotation Workflow with CellPose"
+    "# OMERO Image Annotation Workflow with CellPose\n",
+    "This notebook guides you through annotating images in OMERO using the CellPose workflow. Each step is explained clearly."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup and Installation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📦 omero-annotate-ai version: 0.1.0\n",
-      "🔗 OMERO functionality: ✅ Available\n",
-      "🔑 Keyring support: ✅ Available\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Import the package\n",
-    "import omero_annotate_ai\n",
-    "from omero_annotate_ai import (\n",
-    "    create_omero_connection_widget,\n",
-    "    create_workflow_widget,\n",
-    "    create_pipeline\n",
-    ")\n",
-    "\n",
-    "# System imports\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "print(f\"📦 omero-annotate-ai version: {omero_annotate_ai.__version__}\")\n",
-    "# Check dependencies\n",
-    "try:\n",
-    "    import ezomero\n",
-    "    print(f\"🔗 OMERO functionality: ✅ Available\")\n",
-    "except ImportError:\n",
-    "    print(f\"🔗 OMERO functionality: ❌ Install with: pip install -e .[omero]\")\n",
-    "\n",
-    "try:\n",
-    "    import keyring\n",
-    "    print(f\"🔑 Keyring support: ✅ Available\")\n",
-    "except ImportError:\n",
-    "    print(f\"🔑 Keyring support: ⚠️ Not available (manual password entry only)\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. OMERO Connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔌 OMERO Connection Setup\n",
-      "Use the widget below to connect to your OMERO server:\n",
-      "  • Fill in server details (host, username, password)\n",
-      "  • Test connection before proceeding\n",
-      "  • Choose password storage duration if desired\n",
-      "  • Click 'Save & Connect' to establish connection\n",
-      "\n",
-      "Loaded configuration from connection history: root@localhost\n",
-      "Password loaded from keychain (no expiration)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4740389adea486698fbbc649a0eeaed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h3>🔌 OMERO Server Connection</h3>', layout=Layout(margin='0 0 20px 0')), HTML(valu…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "📝 Next Step: Run the cell below after connecting to OMERO\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create and display the OMERO connection widget\n",
-    "print(\"🔌 OMERO Connection Setup\")\n",
-    "print(\"Use the widget below to connect to your OMERO server:\")\n",
-    "print(\"  • Fill in server details (host, username, password)\")\n",
-    "print(\"  • Test connection before proceeding\")\n",
-    "print(\"  • Choose password storage duration if desired\")\n",
-    "print(\"  • Click 'Save & Connect' to establish connection\")\n",
-    "print()\n",
-    "\n",
-    "conn_widget = create_omero_connection_widget()\n",
-    "conn_widget.display()\n",
-    "\n",
-    "print(\"\\n📝 Next Step: Run the cell below after connecting to OMERO\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ OMERO connection established!\n",
-      "👤 User: root\n",
-      "🏢 Group: system\n",
-      "🔐 Secure: True\n",
-      "🔗 Connection ready for workflow setup\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get the OMERO connection\n",
-    "conn = conn_widget.get_connection()\n",
-    "\n",
-    "if conn is None:\n",
-    "    raise ConnectionError(\"❌ No OMERO connection established. Please use the widget above to connect.\")\n",
-    "\n",
-    "print(\"✅ OMERO connection established!\")\n",
-    "print(f\"👤 User: {conn.getUser().getName()}\")\n",
-    "print(f\"🏢 Group: {conn.getGroupFromContext().getName()}\")\n",
-    "print(f\"🔐 Secure: {conn.isSecure()}\")\n",
-    "print(f\"🔗 Connection ready for workflow setup\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Workflow Configuration"
+    "## 1. Setup and Installation\n",
+    "Install and import the required libraries. Make sure you have access to OMERO and the omero-annotate-ai package."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔬 OMERO Annotation Workflow Setup\n",
-      "Follow the sequential workflow below:\n",
-      "  1. Select working directory\n",
-      "  2. Choose OMERO container\n",
-      "  3. Check existing annotation tables\n",
-      "  4. Configure micro-SAM parameters\n",
-      "  5. Save configuration\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ff6e9480d64950aa7b2875c32c2340",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h3>🔬 OMERO Annotation Workflow</h3>', layout=Layout(margin='0 0 20px 0')), IntProg…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "📝 Next Step: Complete the workflow above, then run the cell below\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create and display the workflow widget\n",
-    "print(\"🔬 OMERO Annotation Workflow Setup\")\n",
-    "print(\"Follow the sequential workflow below:\")\n",
-    "print(\"  1. Select the local working directory\")\n",
-    "print(\"  2. Choose OMERO container\")\n",
-    "print(\"  3. Check existing annotation tables\")\n",
-    "print(\"  4. Configure micro-SAM parameters\")\n",
-    "print(\"  5. Save configuration\")\n",
+    "# Import the main package and check dependencies\n",
+    "import omero_annotate_ai\n",
+    "from omero_annotate_ai import (\n",
+    "    create_omero_connection_widget,\n",
+    "    create_workflow_widget,\n",
+    "    create_pipeline\n",
+    " )\n",
     "\n",
-    "workflow_widget = create_workflow_widget(connection=conn)\n",
-    "workflow_widget.display()\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "print(\"\\n📝 Next Step: Complete the workflow above, then run the cell below\")"
+    "print(f\"omero-annotate-ai version: {omero_annotate_ai.__version__}\")\n",
+    "try:\n",
+    "    import ezomero\n",
+    "    print(\"OMERO functionality: Available\")\n",
+    "except ImportError:\n",
+    "    print(\"OMERO functionality: Not available. Install with: pip install -e .[omero]\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Pipeline Execution"
+    "## 2. Connect to OMERO\n",
+    "Use the widget below to connect to your OMERO server. Fill in your server details and test the connection before proceeding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create and display the OMERO connection widget\n",
+    "print(\"OMERO Connection Setup\")\n",
+    "conn_widget = create_omero_connection_widget()\n",
+    "conn_widget.display()\n",
+    "print(\"\\nAfter connecting, run the next cell to continue.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the OMERO connection\n",
+    "conn = conn_widget.get_connection()\n",
+    "\n",
+    "if conn is None:\n",
+    "    raise ConnectionError(\"No OMERO connection established. Please use the widget above to connect.\")\n",
+    "\n",
+    "print(\"OMERO connection established.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Configure the Annotation Workflow\n",
+    "Set up your annotation workflow using the widget below. Select your working directory, OMERO container, and configure annotation parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create and display the workflow widget\n",
+    "print(\"Annotation Workflow Setup\")\n",
+    "workflow_widget = create_workflow_widget(connection=conn)\n",
+    "workflow_widget.display()\n",
+    "print(\"\\nAfter completing the workflow, run the next cell.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Review and Run the Annotation Pipeline\n",
+    "Preview your configuration, validate your OMERO selection, and run the annotation pipeline."
    ]
   },
   {
@@ -235,51 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "📋 Configuration Summary:\n",
-      "   📦 Container: plate (ID: 2)\n",
-      "   🎯 Training Set: micro_sam_incucyte_20250909_212809\n",
-      "   🔬 Model: vit_b_lm\n",
-      "   📺 Channel: [0]\n",
-      "   📁 Output: D:\\Maarten\\Data\\cellpose_tmp\n",
-      "   🔄 Resume from Table: False\n",
-      "   📖 Read-only Mode: False\n",
-      "   🧩 Patches: 1 per image (512×512)\n",
-      "\n",
-      "📊 Processing: 3 training + 3 validation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get configuration from workflow widget\n",
     "config = workflow_widget.get_config()\n",
     "\n",
-    "# Display configuration summary\n",
-    "print(\"\\n📋 Configuration Summary:\")\n",
-    "print(f\"   📦 Container: {config.omero.container_type} (ID: {config.omero.container_id})\")\n",
-    "print(f\"   🎯 Training Set: {config.name}\")\n",
-    "print(f\"   🔬 Model: {config.ai_model.model_type}\")\n",
-    "print(f\"   📺 Channel: {config.spatial_coverage.channels}\")\n",
-    "print(f\"   📁 Output: {config.output.output_directory}\")\n",
-    "print(f\"   🔄 Resume from Table: {config.workflow.resume_from_table}\")\n",
-    "print(f\"   📖 Read-only Mode: {config.workflow.read_only_mode}\")\n",
+    "print(\"Configuration Summary:\")\n",
+    "print(f\"Container: {config.omero.container_type} (ID: {config.omero.container_id})\")\n",
+    "print(f\"Training Set: {config.name}\")\n",
+    "print(f\"Model: {config.ai_model.model_type}\")\n",
+    "print(f\"Channel: {config.spatial_coverage.channels}\")\n",
+    "print(f\"Output: {config.output.output_directory}\")\n",
+    "print(f\"Resume from Table: {config.workflow.resume_from_table}\")\n",
+    "print(f\"Read-only Mode: {config.workflow.read_only_mode}\")\n",
     "\n",
     "if config.processing.use_patches:\n",
-    "    print(f\"   🧩 Patches: {config.processing.patches_per_image} per image ({config.processing.patch_size[0]}×{config.processing.patch_size[1]})\"\n",
-    "    )\n",
+    "    print(f\"Patches: {config.processing.patches_per_image} per image ({config.processing.patch_size[0]}×{config.processing.patch_size[1]})\")\n",
     "\n",
     "if config.spatial_coverage.three_d:\n",
-    "    print(f\"   🧊 3D processing: Enabled\")\n",
-    "\n",
-    "\n",
-    "print(f\"\\n📊 Processing: {'All images' if config.training.segment_all else f'{config.training.train_n} training + {config.training.validate_n} validation'}\")"
+    "    print(\"3D processing: Enabled\")"
    ]
   },
   {
@@ -291,36 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Validating plate with ID 2...\n",
-      "✅ Found plate: incucyte\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create pipeline and preview what will be processed\n",
     "pipeline = create_pipeline(config, conn)\n",
     "\n",
-    "# Get container details\n",
     "container_type = config.omero.container_type\n",
     "container_id = config.omero.container_id\n",
     "\n",
-    "print(f\"🔍 Validating {container_type} with ID {container_id}...\")\n",
-    "\n",
-    "# Validate container exists\n",
+    "print(f\"Validating {container_type} with ID {container_id}...\")\n",
     "container = conn.getObject(container_type.capitalize(), container_id)\n",
     "if container is None:\n",
     "    raise ValueError(f\"{container_type.capitalize()} with ID {container_id} not found\")\n",
-    "\n",
-    "print(f\"✅ Found {container_type}: {container.getName()}\")\n",
-    "if container.getDescription():\n",
-    "    print(f\"📝 Description: {container.getDescription()}\")"
+    "print(f\"Found {container_type}: {container.getName()}\")"
    ]
   },
   {
@@ -328,76 +169,24 @@
    "metadata": {},
    "source": [
     "#### 4.3. Run the annotation pipeline on the files\n",
-    "For CellPose it will export the images for training into the local folder."
+    "For CellPose, this will export the images for training into the local folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Starting annotation pipeline...\n",
-      "Loading images from plate 2\n",
-      "Found 88 images\n",
-      "Processing 88 images for Cellpose training\n",
-      "Preparing processing units...\n",
-      "Creating initial OMERO table...\n",
-      "📋 Created/replaced tracking table 'micro_sam_training_micro_sam_incucyte_20250909_212809' with 6 units\n",
-      "   Container: plate 2\n",
-      "   Table ID: 42\n",
-      "Created OMERO table with ID: 42\n",
-      "Found 6 unprocessed annotations\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "📊 Loading 1 images using dask...\n",
-      "💾 Materializing dask arrays to numpy...\n",
-      "   Processing chunk 1/1\n",
-      "✅ Successfully loaded 1 images\n",
-      "Loaded 2D data shape: (1040, 1408)\n",
-      "\n",
-      " Images successfully loaded!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the pipeline for CellPose\n",
-    "print(\"🚀 Starting annotation pipeline...\")\n",
+    "print(\"Starting annotation pipeline...\")\n",
     "try:\n",
     "    table_id, processed_images = pipeline.run_cp_workflow()\n",
-    "\n",
-    "    print(f\"\\n Images successfully loaded!\")        \n",
+    "    print(\"Images successfully loaded!\")\n",
     "except Exception as e:\n",
     "    print(f\"Error during annotation pipeline: {e}\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()\n",
-    "    raise"
+    "    traceback.print_exc()"
    ]
   },
   {
@@ -413,7 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Run cellpose and finetune the model\n",
+    "# Run CellPose and finetune the model as needed\n",
+    "# Example: run CellPose from the command line or using the GUI\n",
     "# pixi run cellpose"
    ]
   },
@@ -428,18 +218,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export as bioimage.io model\n",
-    "Check the details here:\n",
-    "https://cellpose.readthedocs.io/en/latest/models.html#sharing-models-on-bioimage-io"
+    "#### 4.6. Export as bioimage.io model\n",
+    "For details, see: https://cellpose.readthedocs.io/en/latest/models.html#sharing-models-on-bioimage-io"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Cleanup\n",
-    "\n",
-    "Close the OMERO connection when finished."
+    "## 5. Cleanup (Recommended)\n",
+    "Close the OMERO connection when you are finished. This is good practice, especially when working with shared servers."
    ]
   },
   {
@@ -448,13 +236,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Close OMERO connection\n",
+    "# Close OMERO connection (optional, but recommended)\n",
     "if 'conn' in locals() and conn is not None:\n",
     "    conn.close()\n",
-    "    print(\"🔌 OMERO connection closed\")\n",
-    "\n",
-    "print(f\"\\n🎉 Streamlined workflow completed!\")\n",
-    "print(f\"📊 Total images processed: {len(processed_images) if 'processed_images' in locals() else 0}\")"
+    "    print(\"OMERO connection closed.\")"
    ]
   }
  ],
