Update execution counts and improve connection handling in OMERO annotation notebook; add method for retrieving images from container in annotation pipeline

--- a/notebooks/annotation/omero-annotate-ai-annotation-widget.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-annotation-widget.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -68,14 +68,14 @@
      "output_type": "stream",
      "text": [
       "OMERO Connection Setup\n",
-      "Loaded configuration from connection history: root@localhost\n",
-      "Password loaded from keychain (no expiration)\n"
+      "Loaded configuration from connection history: public@ws://idr.openmicroscopy.org/omero-ws\n",
+      "Password loaded from keychain\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8cbce70fc674de08644d0c642877650",
+       "model_id": "a095bc44d73a4dfab4a1d6ba638b354f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -786,9 +786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OMERO connection closed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Close OMERO connection (optional, but recommended)\n",
     "if 'conn' in locals() and conn is not None:\n",
