Refactor annotation pipeline and related components to use spatial coverage configuration
- Updated references from `self.config.processing` to `self.config.spatial_coverage` in the AnnotationPipeline class.
- Removed `model_type` from various method signatures and replaced with `pretrained_from` where applicable.
- Modified the WorkflowWidget to reflect changes in configuration structure, including patch settings and model type.
- Enhanced the training functions to prepare training data directly from an AnnotationConfig object.
- Updated tests to align with the new configuration structure, ensuring proper validation and functionality.
- Adjusted DataFrame preparation for OMERO to include both `annotation_created_at` and `annotation_updated_at` fields.

--- a/notebooks/annotation/omero-annotate-ai-from-yaml.ipynb
+++ b/notebooks/annotation/omero-annotate-ai-from-yaml.ipynb
@@ -20,7 +20,7 @@
     "    create_pipeline,\n",
     ")\n",
     "\n",
-    "from omero_annotate_ai.core.config import load_config_from_yaml\n",
+    "from omero_annotate_ai.core.annotation_config import load_config_from_yaml\n",
     "import os\n",
     "from pathlib import Path\n",
     "\n",
