--- a/notebooks/training/omero-training-microsam.ipynb
+++ b/notebooks/training/omero-training-microsam.ipynb
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test-neu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
